# EZ-EDA

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/: app.py
src/EZ_EDA/: EZ_EDA_app.py  __init__.py  run.py
