[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "EZ EDA"
version = "0.1.0"
authors = [
    { name="Maliek Curtis" }
]
dependencies = [
    "mypy",
    "numpy",
    "pandas",
    "streamlit",
    "pytest"
]

[tool.black]
max-line-length = 88


[tool.ruff]
line-length = 88
