[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "EZ-EDA"
version = "0.1.0"
authors = [
    { name="Maliek Curtis" }
]
dependencies = [
    "numpy",
    "pandas",
    "streamlit",
]

[project.optional-dependencies]
dev = [
    "watchdog",
    "mypy",
    "pytest",
]

[tool.black]
max-line-length = 88


[tool.ruff]
fix = true
line-length = 88


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q", "I", "D"]

[tool.ruff.lint.isort]
force-wrap-aliases = true
combine-as-imports = true
length-sort-straight = true
relative-imports-order = "closest-to-furthest"

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.ruff.lint.pydocstyle]
convention = "google"
